--- a/templates/movies/failed.html
+++ b/templates/movies/failed.html
@@ -9,7 +9,7 @@
             padding: 0;
             height: 100vh;
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #f3d8dd);
+            background: linear-gradient(135deg, #ffd9d9);
             display: flex;
             justify-content: center;
             align-items: center;
