--- a/templates/movies/success.html
+++ b/templates/movies/success.html
@@ -9,7 +9,7 @@
             padding: 0;
             height: 100vh;
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #ffd5d5, #93f9b9);
+            background: linear-gradient(135deg,  #ffd9d9);
             display: flex;
             justify-content: center;
             align-items: center;
