--- a/templates/users/basic.html
+++ b/templates/users/basic.html
@@ -95,6 +95,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
+            {% if user.is_staff %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'admin_dashboard' %}">
+                Admin Dashboard
+              </a>
+            </li>
+            {% endif %}
             {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="/">Home</a>
